I think putting them all in the same folder works better.

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
     <title>Read Only by HTML5 UP</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="static/main.css" />
+    <link rel="stylesheet" href="main.css" />
 </head>
 <body class="is-preload">
 
@@ -475,13 +475,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 </div>
 
 <!-- Scripts -->
-<script src="static/jquery.min.js"></script>
-<script src="static/jquery.scrollex.min.js"></script>
-<script src="static/jquery.scrolly.min.js"></script>
-<script src="static/browser.min.js"></script>
-<script src="static/breakpoints.min.js"></script>
-<script src="static/util.js"></script>
-<script src="static/main.js"></script>
+<script src="jquery.min.js"></script>
+<script src="jquery.scrollex.min.js"></script>
+<script src="jquery.scrolly.min.js"></script>
+<script src="browser.min.js"></script>
+<script src="breakpoints.min.js"></script>
+<script src="util.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
